--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,4 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}JuCoin Web v1.0{% endblock %}
-{% block body %}Welcome to JuCoin Web version!{% endblock %}
+{% block body %}
+	Welcome to JuCoin Web version!<br><br>
+
+
+	<a href="{{ path('app_login') }}">Login</a>
+{% endblock %}
